tests/type_safety/pattern_non_exhaustive.stderr
warning: unused import: `StreamingStatus`
 --> tests/type_safety/pattern_non_exhaustive.rs:9:39
  |
9 | use openrouter_api::types::{ChatRole, StreamingStatus};
  |                                       ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0004]: non-exhaustive patterns: `ChatRole::System` and `ChatRole::Tool` not covered
  --> tests/type_safety/pattern_non_exhaustive.rs:14:11
   |
14 |     match role {
   |           ^^^^ patterns `ChatRole::System` and `ChatRole::Tool` not covered
   |
note: `ChatRole` defined here
  --> src/types/chat.rs
   |
   | pub enum ChatRole {
   | ^^^^^^^^^^^^^^^^^
...
   |     System,
   |     ------ not covered
   |     Tool,
   |     ---- not covered
   = note: the matched value is of type `ChatRole`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
16 ~         ChatRole::Assistant => "assistant response",
17 ~         ChatRole::System | ChatRole::Tool => todo!(),
   |
